Not 100% sure how these layers work as it wasn't yet covered, but swapped the imported green and purple to make purple more important and therefore make them the correct color.

--- a/3. Testing your skills: The Cascade/Task 2/styles.css
+++ b/3. Testing your skills: The Cascade/Task 2/styles.css
@@ -1,4 +1,4 @@
-@layer yellow, purple, green;
+@layer yellow, green, purple;
 
 @layer yellow {
   #outer div ul .nav a {
@@ -21,5 +21,5 @@
 /* Task 2
 For this task, we want manipulate the cascale layer order to:
 - color the links `rebeccapurple`
-    - we cannot edit the `lightgreen` declaration
+    - we cannot edit the `lightgreen`
 */
